--- a/enjeux.html
+++ b/enjeux.html
@@ -14,54 +14,57 @@
 
         <section class="section hero">
             <h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
-            <p>Le jeu vidéo fait partie intégrante du quotidien de nos jeunes. c'est une source de plaisir et de socialisation, mais qui soulève des questions légitimes pour les parents et les éducateurs. chez Ludus Mentis, nous ne voyons pas le jeu comme un problème, mais comme un formidable terrain d'apprentissage, à condition qu'il soit bien accompagné. découvrez notre analyse des grands enjeux et les réponses concrètes que nous y apportons.</p>
+            <p>Le jeu vidéo est aujourd’hui un élément central du quotidien des jeunes. Il constitue une source de plaisir, de créativité et de socialisation, mais il suscite aussi des interrogations légitimes de la part des parents et des éducateurs. Chez Ludus Mentis, nous considérons le jeu non pas comme un problème, mais comme un terrain d’apprentissage et de développement, à condition qu’il soit encadré et réfléchi. Voici notre analyse des grands enjeux, appuyée par des données scientifiques, et les solutions que nous mettons en œuvre.</p>
         </section>
 
         <section class="section card">
             <h2>Quelques chiffres pour cadrer le débat</h2>
-            <p>Avant d'explorer les enjeux en détail, voici quelques données qui illustrent l'ampleur du phénomène en europe et en belgique :</p>
+            <p>Avant d'explorer les enjeux en détail, voici quelques données clés en Europe et en Belgique :</p>
             <ul>
-                <li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo.</li>
-                <li><strong>22 % des joueurs</strong> admettent jouer plus de 4 heures d'affilée.</li>
-                <li><strong>57 % des adolescents belges (10-17 ans)</strong> dépassent les 2 heures d’écran recommandées le week-end.</li>
-                <li><strong>12 % des adolescents européens</strong> sont considérés comme à risque de développer une pratique problématique (gaming disorder) selon l'OMS.</li>
+                <li><strong>34 % des adolescents</strong> jouent chaque jour à des jeux vidéo (<a href="#source3">Sciensano, 2023</a>).</li>
+                <li><strong>22 % des joueurs</strong> déclarent jouer plus de 4 heures d’affilée (<a href="#source2">OMS, 2024</a>).</li>
+                <li><strong>57 % des adolescents belges (10‑17 ans)</strong> dépassent les 2 heures d’écran recommandées le week‑end (<a href="#source3">Sciensano, 2023</a>).</li>
+                <li><strong>12 % des adolescents européens</strong> présentent un risque de « gaming disorder » selon l’OMS (<a href="#source4">ICD‑11, OMS</a>).</li>
             </ul>
         </section>
 
         <section class="section card">
-            <h2>Enjeu n°1 : le juste équilibre entre vie numérique et vie réelle</h2>
-            <p><strong>le contexte :</strong> l'hyperconnexion est une réalité. quand les sessions de jeu s'étirent sur plus de 4 heures d'affilée pour un jeune sur cinq, l'équilibre avec les autres sphères de la vie (école, famille, sport, sommeil) peut être fragilisé.</p>
-            <p><strong>les risques concrets :</strong> une pratique excessive peut entraîner une fatigue visuelle, des troubles du sommeil liés à l'exposition à la lumière bleue, mais aussi une sédentarité accrue. sur le plan scolaire, la concentration peut être affectée, et le temps consacré aux devoirs ou aux activités en famille se réduit.</p>
-            <p><strong>la réponse de Ludus Mentis :</strong> nous ne luttons pas contre le temps d'écran, nous apprenons à le qualifier.
+            <h2>Enjeu n°1 : trouver l’équilibre entre vie numérique et vie réelle</h2>
+            <p><strong>Le contexte :</strong> l’hyperconnexion est devenue la norme chez les jeunes. Des sessions de plus de 4 heures consécutives concernent un joueur adolescent sur cinq (<a href="#source2">OMS, 2024</a>). Cet usage intensif peut empiéter sur d’autres sphères essentielles : sommeil, activités physiques, vie familiale et scolaires.</p>
+            <p><strong>Les risques concrets :</strong> une pratique excessive favorise la sédentarité (<a href="#source7">PLOS ONE, 2022</a>), la fatigue visuelle (<a href="#source6">PMC, 2023</a>) et les troubles du sommeil (<a href="#source8">PubMed, 2024</a>). Le temps consacré aux devoirs ou aux échanges familiaux se réduit, et la concentration peut être affectée.</p>
+            <p><strong>La réponse de Ludus Mentis :</strong> nous ne cherchons pas à réduire le temps d’écran de façon arbitraire, mais à en améliorer la qualité.
                 <ul>
-                    <li><strong>sessions structurées :</strong> nos ateliers ont une durée définie, incluant des moments de jeu, mais aussi des temps d'échange et de pause obligatoires.</li>
-                    <li><strong>exergaming et pauses actives :</strong> nous intégrons des activités physiques comme just dance ou ring fit pour montrer que bouger fait aussi partie de la culture du jeu.</li>
-                    <li><strong>ateliers de sensibilisation :</strong> nous abordons avec les jeunes les thèmes du sommeil, de la nutrition et de l'importance de l'équilibre des activités, pour qu'ils deviennent acteurs de leur propre bien-être.</li>
-                </ul></p>
+                    <li><strong>Sessions structurées :</strong> chaque atelier combine temps de jeu, moments d’échange et pauses obligatoires.</li>
+                    <li><strong>Exergaming et pauses actives :</strong> intégration d’activités physiques comme <em>Just Dance</em> ou <em>Ring Fit</em> pour relier culture vidéoludique et mouvement.</li>
+                    <li><strong>Ateliers de sensibilisation :</strong> discussions sur le sommeil, la nutrition et l’équilibre des activités, pour que les jeunes deviennent acteurs de leur bien-être.</li>
+                </ul>
+            </p>
         </section>
 
         <section class="section card">
-            <h2>Enjeu n°2 : de l'isolement en ligne à la coopération réelle</h2>
-            <p><strong>le contexte :</strong> le jeu en ligne est un espace de socialisation majeur. cependant, les interactions via un casque et un micro, souvent anonymes, peuvent manquer de profondeur et parfois, de bienveillance. le cyberharcèlement est une réalité dans les communautés de joueurs, créant un environnement qui peut être toxique.</p>
-            <p><strong>les risques concrets :</strong> un jeune peut se sentir seul malgré ses nombreux "amis" en ligne, ou au contraire, s'enfermer dans une communauté virtuelle au détriment de ses relations sociales réelles. l'exposition à des comportements agressifs ou à de la triche peut biaiser sa perception des interactions sociales et de la compétition saine.</p>
-            <p><strong>la réponse de Ludus Mentis :</strong> nous faisons du jeu un prétexte à la rencontre et à l'apprentissage du vivre-ensemble.
+            <h2>Enjeu n°2 : de l’isolement virtuel à la coopération réelle</h2>
+            <p><strong>Le contexte :</strong> le jeu en ligne est aujourd’hui un espace social majeur. Toutefois, les échanges virtuels peuvent manquer de profondeur et d’empathie. Les comportements toxiques, dont le cyberharcèlement, sont documentés dans les communautés de joueurs (<a href="#source9">EPRS, 2023</a>).</p>
+            <p><strong>Les risques concrets :</strong> un jeune peut ressentir de la solitude malgré de nombreuses interactions en ligne, ou s’isoler dans un cercle virtuel au détriment de ses relations physiques. L’exposition répétée à des comportements agressifs ou à de la triche peut fausser sa vision d’une compétition saine (<a href="#source10">Parlement européen, 2023</a>).</p>
+            <p><strong>La réponse de Ludus Mentis :</strong> utiliser le jeu comme outil d’apprentissage du vivre-ensemble.
                 <ul>
-                    <li><strong>priorité à la coopération :</strong> notre sélection de jeux (overcooked, etc.) impose de communiquer et de s'entraider pour réussir. l'exploit individuel est moins valorisé que la réussite collective.</li>
-                    <li><strong>une charte co-construite :</strong> dès le début du cycle, nous élaborons une charte d'éthique avec les jeunes. le respect, l'empathie et le fair-play ne sont pas des options, mais les règles du jeu.</li>
-                    <li><strong>débriefings post-partie :</strong> chaque session se termine par un cercle de parole, basé sur le cycle de kolb, pour analyser les stratégies, les réussites, mais aussi les tensions. c'est là qu'on apprend à donner et recevoir un feedback constructif.</li>
-                </ul></p>
+                    <li><strong>Priorité à la coopération :</strong> sélection de jeux nécessitant entraide et communication (ex. : <em>Overcooked</em>), où la réussite collective prime.</li>
+                    <li><strong>Charte co‑construite :</strong> élaboration avec les jeunes d’un code éthique fondé sur le respect, l’empathie et le fair‑play.</li>
+                    <li><strong>Débriefings post‑partie :</strong> cercles de parole inspirés du cycle de Kolb pour analyser stratégies, réussites et tensions, et apprendre à donner/recevoir un feedback constructif.</li>
+                </ul>
+            </p>
         </section>
 
         <section class="section card">
-            <h2>Enjeu n°3 : apprendre à gagner, mais surtout à perdre</h2>
-            <p><strong>le contexte :</strong> le jeu vidéo est un formidable vecteur d'émotions : la joie de la victoire, mais aussi la frustration de l'échec, le stress des moments décisifs. mal gérées, ces émotions peuvent mener à des réactions de colère ("ragequit"), à une mauvaise estime de soi, et dans les cas les plus sérieux, à un rapport anxieux ou obsessionnel au jeu, un risque qui concerne jusqu'à 12% des adolescents.</p>
-            <p><strong>les risques concrets :</strong> l'oms a reconnu le "gaming disorder" comme une dépendance comportementale. sans aller jusqu'à cet extrême, une mauvaise gestion émotionnelle peut nuire à l'ambiance de jeu, se transposer dans la vie réelle et créer des conflits familiaux autour de la pratique.</p>
-            <p><strong>la réponse de Ludus Mentis :</strong> nous créons un environnement sécurisé pour apprendre à naviguer dans la tempête émotionnelle.
+            <h2>Enjeu n°3 : apprendre à gagner… et à perdre</h2>
+            <p><strong>Le contexte :</strong> le jeu vidéo est un catalyseur d’émotions intenses : joie, frustration, stress. Mal gérées, ces émotions peuvent conduire à des comportements excessifs comme le « ragequit » ou une baisse de l’estime de soi. Jusqu’à 12 % des adolescents présentent un risque de dépendance (<a href="#source4">OMS, 2024</a>).</p>
+            <p><strong>Les risques concrets :</strong> au‑delà du « gaming disorder » reconnu par l’OMS, une mauvaise régulation émotionnelle peut détériorer l’ambiance de jeu, créer des conflits familiaux et augmenter l’anxiété.</p>
+            <p><strong>La réponse de Ludus Mentis :</strong> offrir un cadre sécurisé pour développer la maîtrise de soi.
                 <ul>
-                    <li><strong>valorisation de l'effort :</strong> nous mettons l'accent sur la persévérance et la stratégie plutôt que sur le résultat brut. un échec analysé est une victoire pour l'avenir.</li>
-                    <li><strong>gestion du stress :</strong> des ateliers spécifiques sont dédiés à la gestion du stress, avec des techniques de respiration ou de concentration applicables en jeu comme avant un examen.</li>
-                    <li><strong>fair-play et maturité :</strong> l'accès à une future filière plus compétitive est conditionné non pas au niveau de jeu, mais à la démonstration de la maturité, du respect des autres et de la maîtrise de soi.</li>
-                </ul></p>
+                    <li><strong>Valorisation de l’effort :</strong> importance accordée à la persévérance et à la stratégie plutôt qu’au seul résultat.</li>
+                    <li><strong>Gestion du stress :</strong> ateliers de respiration, de concentration et de préparation mentale utilisables en jeu comme en contexte scolaire.</li>
+                    <li><strong>Fair‑play et maturité :</strong> l’accès aux volets compétitifs repose sur la maturité et le respect, pas uniquement sur le niveau de jeu.</li>
+                </ul>
+            </p>
         </section>
 
         <section class="section sources card" id="sources">
