--- a/methodologie.html
+++ b/methodologie.html
@@ -11,32 +11,58 @@
 
     <section class="section card">
       <h1>Notre méthodologie</h1>
-      <p>Ludus Mentis s’appuie sur des méthodes pédagogiques modernes : cycle de kolb, pédagogie par l’action, approche bienveillante et valorisation du collectif.</p>
+      <p>
+        Ludus Mentis transforme la pratique du jeu vidéo coopératif en un puissant levier éducatif. 
+        Inspirés par les clubs sportifs et les académies de musique, nous proposons un cadre structuré, 
+        bienveillant et exigeant, pour développer les compétences psychosociales, cognitives et physiques 
+        des jeunes de 10 à 15 ans.
+      </p>
+      <p>
+        Notre approche répond à quatre enjeux majeurs : 
+        <strong>santé publique</strong> (lutter contre la sédentarité et le manque de sommeil), 
+        <strong>développement social</strong> (favoriser l’empathie et la coopération), 
+        <strong>harmonie familiale</strong> (apaiser les tensions liées aux écrans) 
+        et <strong>vide structurel</strong> (offrir une alternative éducative numérique en Wallonie).
+      </p>
     </section>
 
     <section class="section card">
       <h2>Le cycle d’apprentissage</h2>
+      <p>
+        Notre travail pédagogique s’appuie sur le <strong>cycle de Kolb</strong>, une méthode reconnue 
+        pour transformer l’expérience en apprentissage concret.
+      </p>
       <ul>
-        <li>Expérimentation : jouer ensemble à des jeux conçus pour coopérer</li>
-        <li>Observation et feedback : échanges sur les comportements, points forts, axes de progrès</li>
-        <li>Conceptualisation : tirer des enseignements pour le jeu… et pour la vraie vie</li>
-        <li>Application : tester ses nouvelles compétences lors de la prochaine séance</li>
+        <li><strong>Expérimentation</strong> : jouer ensemble à des jeux conçus pour coopérer, dans un cadre encadré.</li>
+        <li><strong>Observation et feedback</strong> : échanges sur les comportements, points forts et axes de progrès.</li>
+        <li><strong>Conceptualisation</strong> : identifier les stratégies et comportements transférables à la vie réelle.</li>
+        <li><strong>Application</strong> : tester et intégrer ces compétences lors de la séance suivante.</li>
       </ul>
+      <p>
+        Ce processus est renforcé par le <strong>modèle SAFE</strong> (Séquencé, Actif, Focalisé, Explicite), 
+        garantissant un apprentissage structuré et mesurable.
+      </p>
     </section>
 
-<section class="section card">
-  <h2>Notre réponse concrète</h2>
-  <ul>
-    <li><strong>Sessions actives :</strong> jeux coopératifs + exergaming (Ring Fit, Just Dance…), ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
-    <li><strong>Pédagogie innovante :</strong> débriefings en groupe pour apprendre de chaque partie (cycle de Kolb).</li>
-    <li><strong>Charte d’éthique :</strong> co-construite avec les jeunes, pour favoriser le respect et l’empathie.</li>
-    <li><strong>Parentalité positive :</strong> rencontres, ateliers, et bilan en fin de cycle avec les familles.</li>
-    <li><strong>Un “conservatoire numérique” :</strong> une académie structurée, rigoureuse, inclusive, ouverte à tous les jeunes.</li>
-  </ul>
-</section>
-
-
-    
+    <section class="section card">
+      <h2>Notre réponse concrète</h2>
+      <ul>
+        <li><strong>Sessions actives :</strong> alternance de jeux coopératifs, exergaming (Ring Fit, Just Dance…) 
+            et ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
+        <li><strong>Pédagogie innovante :</strong> débriefings guidés en groupe, pour transformer chaque partie en 
+            apprentissage concret (cycle de Kolb).</li>
+        <li><strong>Charte d’éthique :</strong> co-construite avec les jeunes, pour ancrer le respect et l’empathie 
+            dans chaque interaction.</li>
+        <li><strong>Parentalité positive :</strong> rencontres, ateliers, et bilan de progression en fin de module 
+            avec les familles.</li>
+        <li><strong>Un “conservatoire numérique” :</strong> une académie rigoureuse, inclusive, ouverte à tous les jeunes, 
+            qui établit un standard éducatif autour du jeu vidéo.</li>
+      </ul>
+      <p>
+        En travaillant sur la coopération, la communication, la résilience et la confiance en soi, 
+        Ludus Mentis prépare les jeunes à naviguer sereinement dans leur vie numérique et réelle.
+      </p>
+    </section>
 
   </main>
   <div id="footer"></div>
