--- a/enjeux.html
+++ b/enjeux.html
@@ -67,21 +67,52 @@
             </p>
         </section>
 
-        <section class="section sources card" id="sources">
-            <h2>Pour aller plus loin : sources principales</h2>
-            <ol>
-              <li id="source1">European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source2">World Health Organization, « Teens and Screens » report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source3">Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source4">World Health Organization, ICD‑11 – Gaming Disorder, 2019 &amp; OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source5">L’Écho, « Le marché belge du jeu vidéo a bondi de 12 % », juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source6">Systematic review, Europe, « Video Games and Visual Fatigue in Youth », PMC, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source7">« Gaming‑Related Musculoskeletal Disorders in Adolescents », PLOS ONE, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source8">« Screen Time and Sleep in Adolescents », PubMed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source9">European Parliamentary Research Service, « Cyberbullying Among Young People », 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank" rel="noopener">Lien</a></li>
-              <li id="source10">European Parliament, « Loot Boxes in Video Games and Gambling‑Like Elements », 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank" rel="noopener">Lien</a></li>
-            </ol>
-        </section>
+       <section class="section sources card" id="sources">
+  <h2>Pour aller plus loin : sources principales</h2>
+  <ol>
+    <li id="source1">
+      European Commission – Digital Economy and Society Index (DESI) 2024. 
+      <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source2">
+      World Health Organization – « Teens, screens and mental health » report, 2024. 
+      <a href="https://www.who.int/europe/news/item/25-09-2024-teens--screens-and-mental-health" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source3">
+      Sciensano – Enquête de santé HIS 2023‑2024 (Belgique). 
+      <a href="https://www.sciensano.be/fr/resultats-de-lenquete-de-sante-2023-2024" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source4">
+      World Health Organization – Gaming Disorder (ICD‑11). 
+      <a href="https://www.who.int/standards/classifications/frequently-asked-questions/gaming-disorder" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source5">
+      L’Écho – « Le marché belge du jeu vidéo a bondi de 12 % en 2024 ». 
+      <a href="https://www.lecho.be/entreprises/medias-divertissement/le-marche-belge-du-jeu-video-a-bondi-de-12-en-2024/10599384.html" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source6">
+      Systematic review – Video Games and Visual Fatigue in Youth (PMC, 2023). 
+      <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source7">
+      PLOS ONE – « Mobile game addiction and musculoskeletal pain among students » (2022). 
+      <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0308674" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source8">
+      Study – Screen Use and Sleep in Adolescents, PubMed (2024). 
+      <a href="https://pubmed.ncbi.nlm.nih.gov/39226046/" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source9">
+      European Parliamentary Research Service – Cyberbullying Among Young People (2023). 
+      <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank" rel="noopener">Lien</a>
+    </li>
+    <li id="source10">
+      European Parliament – Loot Boxes in Video Games and Gambling‑Like Elements (2023). 
+      <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank" rel="noopener">Lien</a>
+    </li>
+  </ol>
+</section>
+
 
     </main>
     <div id="footer"></div>
