--- a/faq.html
+++ b/faq.html
@@ -11,26 +11,52 @@
 
     <section class="section card">
       <h1>Foire aux questions</h1>
+      <p>Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
+         Si votre question ne figure pas ici, <a href="contact.html">contactez-nous</a> : 
+         nous nous ferons un plaisir d’y répondre.</p>
     </section>
 
     <section class="section card">
       <h2>À qui s’adresse Ludus Mentis&nbsp;?</h2>
-      <p>Aux jeunes de 10 à 15 ans, quels que soient leur niveau de jeu ou leur profil : passionnés ou simples curieux du jeu vidéo !</p>
+      <p>
+        Aux jeunes de <strong>10 à 15 ans</strong>, qu’ils soient passionnés de jeux vidéo, joueurs occasionnels, 
+        ou simplement curieux.  
+        Notre programme s’adapte à chaque profil : les plus expérimentés y trouvent 
+        des défis et du développement personnel, tandis que les débutants découvrent 
+        les bases de la coopération, de la communication et du respect en ligne.
+      </p>
     </section>
 
     <section class="section card">
       <h2>Est-ce qu’il y a de la compétition ?</h2>
-      <p>La priorité est donnée à la coopération, au respect et à la progression de chacun. certains ateliers proposent du challenge en équipe, mais sans esprit toxique de compétition.</p>
+      <p>
+        Notre priorité est <strong>l’esprit d’équipe</strong> et la progression individuelle.  
+        Certains ateliers incluent des défis ludiques ou des tournois internes, mais toujours dans un cadre 
+        <em>positif</em> : l’objectif est d’apprendre à gérer la pression, à collaborer et à respecter l’adversaire.  
+        Nous voulons former des joueurs capables de gagner… et de perdre, avec le même fair-play.
+      </p>
     </section>
 
     <section class="section card">
       <h2>Comment s’inscrire ?</h2>
-      <p>Il suffit de remplir le <a href="contact.html">formulaire de contact</a> ou d’envoyer un mail à info@ludusmentis.be. nous vous répondrons rapidement !</p>
+      <p>
+        Remplissez simplement le <a href="contact.html">formulaire de contact</a> ou envoyez un mail à 
+        <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>.  
+        Nous reviendrons vers vous rapidement avec les informations sur les prochaines sessions, 
+        les places disponibles et les modalités de participation.
+      </p>
     </section>
 
     <section class="section card">
       <h2>Et pour les parents inquiets ?</h2>
-      <p>Le cadre est sécurisé et la transparence avec les familles est totale. vous pouvez nous contacter à tout moment.</p>
+      <p>
+        Nous travaillons en lien étroit avec les familles : chaque module inclut une présentation 
+        de notre approche, des bilans de progression, et des moments d’échange.  
+        Les jeux choisis sont <strong>non violents, coopératifs et adaptés</strong>, et chaque séance se déroule 
+        dans un environnement encadré, convivial et sécurisé.  
+        Les parents peuvent nous contacter à tout moment pour poser des questions ou suivre 
+        l’évolution de leur enfant.
+      </p>
     </section>
 
   </main>
