--- a/academie.html
+++ b/academie.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notre académie : le programme détaillé | Ludus Mentis</title>
   <meta name="description" content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant.">
   <link rel="stylesheet" href="assets/css/styles.css">
