--- a/concept.html
+++ b/concept.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notre concept : le jeu vidéo au service du développement | Ludus Mentis</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
