--- a/enjeux.html
+++ b/enjeux.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeux vidéo : comprendre les enjeux pour mieux agir | Ludus Mentis</title>
     <meta name="description" content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui.">
     <link rel="stylesheet" href="assets/css/styles.css">
