--- a/faq.html
+++ b/faq.html
@@ -51,12 +51,7 @@
     <section class="section card">
       <h2>Et pour les parents inquiets ?</h2>
       <p>
-        Nous travaillons en lien étroit avec les familles : chaque module inclut une présentation 
-        de notre approche, des bilans de progression, et des moments d’échange.  
-        Les jeux choisis sont <strong>non violents, coopératifs et adaptés</strong>, et chaque séance se déroule 
-        dans un environnement encadré, convivial et sécurisé.  
-        Les parents peuvent nous contacter à tout moment pour poser des questions ou suivre 
-        l’évolution de leur enfant.
+       Notre priorité absolue est le développement de l'esprit d'équipe dans un cadre positif. Nous ne nous focalisons pas sur la compétition. Cependant, nous envisageons à terme de proposer une filière plus compétitive, accessible uniquement aux jeunes ayant démontré une maturité, un fair-play et une gestion émotionnelle exemplaires
       </p>
     </section>
 
