--- a/a-propos.html
+++ b/a-propos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ludus Mentis – à propos</title>
+  <title>Ludus Mentis – Notre histoire</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -11,37 +11,27 @@
   <main class="container">
 
     <section class="section card">
-      <h1>À propos de Ludus Mentis</h1>
-      <p>Ludus Mentis, c’est d’abord une conviction : le jeu vidéo, quand il est bien accompagné, peut devenir un formidable levier d’épanouissement, de rencontres, et d’apprentissage pour les jeunes. <br><br>
-        moi-même passionné de jeux vidéo depuis l’enfance, mais aussi conscient des risques liés à une pratique non encadrée, j’ai longtemps cherché un espace où le jeu rime avec bienveillance, développement de compétences et vraie vie sociale. cet espace, je ne l’ai pas trouvé — alors j’ai voulu le créer.</p>
+      <h1>Notre histoire : du scoutisme à l'esport</h1>
+      <p><strong>Je m'appelle Antoine Billard, et Ludus Mentis est le projet qui rassemble toutes mes passions.</strong> Enfant, mon parcours a été un grand mélange : les valeurs de partage et de nature des scouts, la rigueur et la créativité de l'académie de musique, et l'esprit d'équipe du football. Et au milieu de tout ça, une constante : le jeu vidéo.</p>
+      <p>Pour moi, le jeu a toujours été un espace de défi, de logique et d'amitié, un fil rouge qui m'a suivi tout au long de mon parcours.</p>
     </section>
 
     <section class="section card">
-      <h2>Pourquoi Ludus Mentis ?</h2>
-      <p>Beaucoup de parents se sentent dépassés par le numérique : trop d’heures d’écran, des conflits quotidiens, des inquiétudes sur la santé et le repli social. de l’autre côté, les jeunes rêvent de progresser, de se retrouver entre pairs, mais sans forcément vouloir rejoindre une structure “compétitive” ou élitiste.<br><br>
-        Ludus Mentis est né pour réconcilier ces mondes : montrer que le jeu vidéo peut être une chance, à condition d’être guidé, partagé, discuté, et ancré dans le réel.</p>
+      <h2>Un parcours, une conviction</h2>
+      <p>Mes études d'ingénieur de gestion, puis ma carrière de chef de projet en informatique, m'ont appris l'importance de la structure, de la collaboration et de la résolution de problèmes. Des compétences que, paradoxalement, je développais aussi lors de mes parties en ligne.</p>
+      <p>Aujourd'hui, en tant que manager de l'équipe nationale belge de Dota 2, je vois de près ce qui fait la différence au plus haut niveau : non pas la technique seule, mais la communication, la gestion du stress et la cohésion du groupe. C'est exactement ce qui manque dans l'approche grand public du jeu vidéo.</p>
     </section>
 
     <section class="section card">
-      <h2>Mon parcours : entre passion du jeu et engagement éducatif</h2>
-<p>Passionné de jeux vidéo depuis toujours, je suis aussi profondément conscient des défis que cette pratique peut poser aux familles. mon parcours m'a convaincu qu'il manquait un maillon essentiel : un lieu qui allie le plaisir de jouer et l'apprentissage de compétences de vie, loin de la pression de la compétition pure.</p>
-<p>Ludus Mentis est né de cette vision. bien que le projet soit jeune, il bénéficie déjà du soutien de partenaires clés comme la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, qui croient en notre approche innovante.</p>
+      <h2>Réconcilier les mondes</h2>
+      <p>Je suis convaincu que les jeux vidéo, si souvent diabolisés pour les maux qu'une pratique non encadrée peut causer, sont en réalité un formidable outil de développement personnel. Les études commencent à le prouver : bien accompagné, le jeu vidéo peut être extrêmement positif.</p>
+      <p>Ludus Mentis est né de cette certitude : créer le cadre qui n'existait pas pour moi. Un lieu qui s'inspire de la rigueur d'une académie de musique, de la bienveillance d'un mouvement de jeunesse et de la passion de l'esport. Un espace pour prouver que l'on peut passer des heures à jouer, et en ressortir plus grand.</p>
+      <p>Aujourd'hui, ce projet est soutenu par des partenaires clés comme la <strong>commune de Walhain</strong> et la <strong>fédération belge d’esport</strong>, qui croient en notre approche innovante.</p>
     </section>
-
-    <section class="section card">
-      <h2>Nos engagements</h2>
-      <ul>
-        <li>Proposer un cadre où chaque jeune peut apprendre, progresser, s’exprimer — sans pression ni jugement</li>
-        <li>Faire du jeu un outil de dialogue entre générations, et non une source de conflit</li>
-        <li>Associer parents, familles, et professionnels à chaque étape du parcours</li>
-        <li>Ouvrir la porte à une pratique responsable, inclusive, et joyeuse du numérique</li>
-      </ul>
-    </section>
-
+    
     <section class="section card">
       <h2>Envie d’en savoir plus ou de rejoindre l’aventure ?</h2>
-      <p>Contacte-moi sans hésiter, que tu sois parent, jeune, pro de l’éducation, ou simplement curieux.<br>
-        ensemble, on peut prouver qu’on peut jouer… et grandir !</p>
+      <p>Contactez-moi sans hésiter. Ensemble, nous pouvons faire du jeu vidéo une véritable école de vie.</p>
     </section>
 
   </main>
