--- a/mentions.html
+++ b/mentions.html
@@ -12,20 +12,20 @@
 
     <section class="section card">
       <h1>Mentions légales</h1>
-      <p>Ludus Mentis – association à but non lucratif (asbl)<br>
-        siège social : walhain, belgique<br>
-        email : info@ludusmentis.be<br>
-        responsable de publication : antoine billard<br></p>
+      <p>Ludus Mentis – Association à but non lucratif (asbl)<br>
+        Siège social : Walhain, Belgique<br>
+        Email : info@ludusmentis.be<br>
+        Responsable de publication : Antoine Billard<br></p>
     </section>
 
     <section class="section card">
       <h2>Propriété intellectuelle</h2>
-      <p>Le contenu de ce site (textes, images, logos…) est protégé par le droit d’auteur. toute reproduction est interdite sans accord écrit.</p>
+      <p>Le contenu de ce site (textes, images, logos…) est protégé par le droit d’auteur. Toute reproduction est interdite sans accord écrit.</p>
     </section>
 
     <section class="section card">
       <h2>Cookies et données personnelles</h2>
-      <p>Aucune donnée personnelle n’est collectée à votre insu. les cookies éventuels servent uniquement au bon fonctionnement du site.</p>
+      <p>Aucune donnée personnelle n’est collectée à votre insu. Les cookies éventuels servent uniquement au bon fonctionnement du site.</p>
     </section>
 
   </main>
