--- a/methodologie.html
+++ b/methodologie.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ludus Mentis – notre méthodologie</title>
+  <title>Ludus Mentis – Notre méthodologie</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -11,58 +11,52 @@
   <main class="container">
 
     <section class="section card">
-      <h1>Notre méthodologie</h1>
+      <h1>Notre méthodologie : du jeu à la compétence</h1>
       <p>
-        Ludus Mentis transforme la pratique du jeu vidéo coopératif en un puissant levier éducatif. 
-        Inspirés par les clubs sportifs et les académies de musique, nous proposons un cadre structuré, 
-        bienveillant et exigeant, pour développer les compétences psychosociales, cognitives et physiques 
-        des jeunes de 10 à 15 ans.
+        Chez Ludus Mentis, nous ne nous contentons pas de faire jouer les jeunes. Nous transformons chaque partie en une opportunité d'apprentissage grâce à un cadre structuré et bienveillant, inspiré des meilleures pratiques pédagogiques.
       </p>
       <p>
-        Notre approche répond à quatre enjeux majeurs : 
-        <strong>santé publique</strong> (lutter contre la sédentarité et le manque de sommeil), 
-        <strong>développement social</strong> (favoriser l’empathie et la coopération), 
+        Notre approche répond à quatre enjeux majeurs : 
+        <strong>santé publique</strong> (lutter contre la sédentarité), 
+        <strong>développement social</strong> (favoriser l'empathie), 
         <strong>harmonie familiale</strong> (apaiser les tensions liées aux écrans) 
         et <strong>vide structurel</strong> (offrir une alternative éducative numérique en Wallonie).
       </p>
     </section>
 
     <section class="section card">
-      <h2>Le cycle d’apprentissage</h2>
+      <h2>Le cycle de Kolb : comment le jeu devient apprentissage</h2>
       <p>
-        Notre travail pédagogique s’appuie sur le <strong>cycle de Kolb</strong>, une méthode reconnue 
-        pour transformer l’expérience en apprentissage concret.
+        Notre secret réside dans l'application du <strong>cycle de Kolb</strong>, une méthode d'apprentissage en 4 étapes qui transforme une expérience concrète en compétence durable. Voici comment cela fonctionne lors d'une session de jeu :
       </p>
-      <ul>
-        <li><strong>Expérimentation</strong> : jouer ensemble à des jeux conçus pour coopérer, dans un cadre encadré.</li>
-        <li><strong>Observation et feedback</strong> : échanges sur les comportements, points forts et axes de progrès.</li>
-        <li><strong>Conceptualisation</strong> : identifier les stratégies et comportements transférables à la vie réelle.</li>
-        <li><strong>Application</strong> : tester et intégrer ces compétences lors de la séance suivante.</li>
-      </ul>
-      <p>
-        Ce processus est renforcé par le <strong>modèle SAFE</strong> (Séquencé, Actif, Focalisé, Explicite), 
-        garantissant un apprentissage structuré et mesurable.
-      </p>
+      <ol>
+        <li>
+            <strong>L'expérience concrète (l'action) :</strong><br>
+            L'équipe joue une partie sur un jeu comme <em>Overcooked</em>. Rapidement, le chaos s'installe : les commandes se croisent, des plats brûlent. L'équipe fait face à un échec concret, riche en émotions et en informations.
+        </li>
+        <li>
+            <strong>L'observation réfléchie (le débriefing) :</strong><br>
+            L'animateur arrête le jeu et lance le débriefing : "Que s'est-il passé ? Qu'avez-vous ressenti à ce moment-là ?". Les jeunes sont amenés à prendre du recul sur leurs actions, sans jugement. "J'ai crié parce que personne ne m'écoutait", "On ne savait pas qui faisait quoi".
+        </li>
+        <li>
+            <strong>La conceptualisation abstraite (la leçon) :</strong><br>
+            Guidés par l'animateur, les jeunes tirent une leçon générale de l'expérience : "Pour réussir, il faut une communication claire et une bonne répartition des rôles". On établit alors des liens avec la vie de tous les jours : un travail de groupe à l'école, un projet en famille, etc.
+        </li>
+        <li>
+            <strong>L'expérimentation active (la mise en pratique) :</strong><br>
+            L'équipe relance une partie, mais avec une nouvelle stratégie, basée sur la leçon apprise : "Ok, pour cette manche, toi tu gères les cuissons, moi les découpes et on s'annonce les commandes à voix haute". Ils testent leur nouvelle compétence en conditions réelles et constatent leur progression.
+      </ol>
+      <p>Ce cycle, répété à chaque séance, est la clé pour ancrer durablement les compétences de communication, de collaboration et de gestion des émotions.</p>
     </section>
 
     <section class="section card">
-      <h2>Notre réponse concrète</h2>
+      <h2>Nos engagements concrets</h2>
       <ul>
-        <li><strong>Sessions actives :</strong> alternance de jeux coopératifs, exergaming (Ring Fit, Just Dance…) 
-            et ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
-        <li><strong>Pédagogie innovante :</strong> débriefings guidés en groupe, pour transformer chaque partie en 
-            apprentissage concret (cycle de Kolb).</li>
-        <li><strong>Charte d’éthique :</strong> co-construite avec les jeunes, pour ancrer le respect et l’empathie 
-            dans chaque interaction.</li>
-        <li><strong>Parentalité positive :</strong> rencontres, ateliers, et bilan de progression en fin de module 
-            avec les familles.</li>
-        <li><strong>Un “conservatoire numérique” :</strong> une académie rigoureuse, inclusive, ouverte à tous les jeunes, 
-            qui établit un standard éducatif autour du jeu vidéo.</li>
+        <li><strong>Sessions actives :</strong> Alternance de jeux coopératifs, d'exergaming (<em>Ring Fit</em>, <em>Just Dance</em>…) et d'ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
+        <li><strong>Pédagogie structurée :</strong> Débriefings guidés en groupe pour transformer chaque partie en apprentissage (cycle de Kolb).</li>
+        <li><strong>Charte d’éthique :</strong> Co-construite avec les jeunes, pour ancrer le respect et l’empathie dans chaque interaction.</li>
+        <li><strong>Implication parentale :</strong> Rencontres, ateliers, et bilans de progression en fin de module avec les familles.</li>
       </ul>
-      <p>
-        En travaillant sur la coopération, la communication, la résilience et la confiance en soi, 
-        Ludus Mentis prépare les jeunes à naviguer sereinement dans leur vie numérique et réelle.
-      </p>
     </section>
 
   </main>
