--- a/academie.html
+++ b/academie.html
@@ -6,6 +6,7 @@
   <title>Notre académie : le programme détaillé | Ludus Mentis</title>
   <meta name="description" content="Découvrez le programme de l'académie Ludus Mentis : déroulement d'une session type, piliers pédagogiques, et compétences développées par votre enfant.">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
   <div id="header"></div>
