--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ludus Mentis – contact</title>
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
   <div id="header"></div>
