--- a/enjeux.html
+++ b/enjeux.html
@@ -6,6 +6,7 @@
     <title>Jeux vidéo : comprendre les enjeux pour mieux agir | Ludus Mentis</title>
     <meta name="description" content="Analyse approfondie des enjeux liés à la pratique du jeu vidéo chez les jeunes : temps d'écran, isolement, gestion des émotions, chiffres clés et sources à l'appui.">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
 
