--- a/a-propos.html
+++ b/a-propos.html
@@ -20,7 +20,7 @@
     <section class="section card">
       <h2>Un parcours, une conviction</h2>
       <p>Mes études d'ingénieur de gestion, puis ma carrière de chef de projet en informatique, m'ont appris l'importance de la structure, de la collaboration et de la résolution de problèmes. Des compétences que, paradoxalement, je développais aussi lors de mes parties en ligne.</p>
-      <p>Aujourd'hui, en tant que manager de l'équipe nationale belge de Dota 2, je vois de près ce qui fait la différence au plus haut niveau : non pas la technique seule, mais la communication, la gestion du stress et la cohésion du groupe. C'est exactement ce qui manque dans l'approche grand public du jeu vidéo.</p>
+      <p>En parallèle de mon travail acutel, je suis aussi manager (bénévole) de l'équipe nationale belge de Dota 2. Je vois de près ce qui fait la différence au plus haut niveau : non pas la technique seule, mais la communication, la gestion du stress et la cohésion du groupe. C'est exactement ce qui manque dans l'approche grand public du jeu vidéo.</p>
     </section>
 
     <section class="section card">
