--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
     <section class="section card">
       <h2>Un projet soutenu localement</h2>
       <p>Ludus Mentis est une initiative locale soutenue par la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.</p>
+      
+      <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
+        <a href="https://www.walhain.be/" target="_blank" rel="noopener">
+          <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 70px; object-fit: contain;">
+        </a>
+        <a href="https://besf.be/" target="_blank" rel="noopener">
+          <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 70px; object-fit: contain;">
+        </a>
+      </div>
       <a href="academie.html" class="btn">Découvrir notre académie</a>
     </section>
 
