--- a/kit-pedagogique.html
+++ b/kit-pedagogique.html
@@ -8,29 +8,80 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
   <style>
-    /* Styles spécifiques pour cette page pour un look de document */
+    /* ============================================= */
+    /* STYLES POUR LE KIT PÉDAGOGIQUE FINAL          */
+    /* ============================================= */
+
+    /* --- Corps du document --- */
     .document-body {
-      background-color: #fff;
-      border: 1px solid #eee;
-      padding: 2rem 2.5rem;
+      background-color: var(--clr-surface);
+      border: 1px solid var(--clr-accent-light);
+      padding: clamp(1.5rem, 4vw, 3rem);
     }
+
+    /* --- En-tête --- */
     .document-header {
       text-align: center;
-      border-bottom: 2px solid var(--clr-accent-light);
       padding-bottom: 2rem;
       margin-bottom: 2rem;
+      border-bottom: 2px solid var(--clr-accent-light);
     }
     .document-header img {
-      max-width: 100px;
+      max-width: 120px;
       margin-bottom: 1rem;
     }
+    .document-header h1 {
+      color: var(--clr-accent-dark);
+    }
+
+    /* --- Titres de section --- */
     .document-section h3 {
       color: var(--clr-accent-dark);
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid var(--clr-accent-light);
       padding-bottom: 0.5rem;
       margin-top: 2.5rem;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
+
+    /* --- Cycle de Kolb --- */
+    .kolb-cycle {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 1.5rem;
+        counter-reset: kolb-counter;
+    }
+    .kolb-step {
+        background-color: var(--clr-bg);
+        padding: 1.5rem;
+        border-radius: var(--radius);
+        position: relative;
+        border: 1px solid var(--clr-accent-light);
+        border-top: 4px solid var(--clr-accent);
+    }
+    .kolb-step::before {
+        counter-increment: kolb-counter;
+        content: counter(kolb-counter);
+        position: absolute;
+        top: -15px;
+        left: 15px;
+        background: var(--clr-accent);
+        color: white;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        box-shadow: var(--shadow-sm);
+    }
+    .kolb-step h4 {
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+        color: var(--clr-accent-dark);
+    }
+
+    /* --- Cartes de compétences avec icônes --- */
     .competences-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -40,12 +91,19 @@
       background-color: var(--clr-bg);
       padding: 1.5rem;
       border-radius: var(--radius);
-      border-left: 4px solid var(--clr-accent);
+      border: 1px solid var(--clr-accent-light);
+      text-align: center;
+    }
+    .competence-card .icon {
+        color: var(--clr-accent);
+        margin-bottom: 1rem;
     }
     .competence-card h4 {
       margin-top: 0;
       color: var(--clr-accent-dark);
     }
+
+    /* --- Pied de page --- */
     .document-footer {
       text-align: center;
       margin-top: 3rem;
@@ -56,12 +114,21 @@
       max-height: 60px;
       margin: 0 1rem;
       opacity: 0.8;
+      transition: opacity var(--transition);
     }
+    .partner-logos img:hover {
+        opacity: 1;
+    }
+    
+    /* --- Styles d'impression --- */
     @media print {
-      body { background: #fff; }
+      body { background: #fff; color: #000; }
       .site-header, .site-footer, .no-print { display: none !important; }
       .container { max-width: 100%; padding: 0; margin: 0; }
-      .document-body { border: none; box-shadow: none; }
+      .document-body { border: none; box-shadow: none; margin: 0; }
+      .document-header { margin: 0; padding: 0; background: none; border-bottom: 2px solid #ccc; }
+      .competence-card, .kolb-step { background-color: #f9f9f9 !important; border: 1px solid #ddd; }
+      .kolb-step::before { border-color: #fff; }
     }
   </style>
 </head>
@@ -74,30 +141,42 @@
       <header class="document-header">
         <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis">
         <h1>Kit pédagogique</h1>
-        <p style="font-size: 1.2rem; color: var(--clr-text);">Le jeu vidéo au service des compétences socio-émotionnelles</p>
+        <p style="font-size: 1.2rem;">Le jeu vidéo au service des compétences socio-émotionnelles</p>
         <p>Un outil pour les enseignants, directeurs d'établissement et acteurs du monde éducatif.</p>
       </header>
 
       <section class="document-section">
         <h3>Notre vision : transformer la passion en compétence</h3>
         <p>La passion des jeunes pour le jeu vidéo est une énergie formidable. Plutôt que de la considérer comme un obstacle, nous la voyons comme une opportunité unique. Les écrans font partie de leur réalité ; notre rôle est de les accompagner pour en faire un usage intelligent, créatif et socialement riche.</p>
-        <p><strong>Ludus Mentis est né d'une conviction :</strong> un temps d'écran bien encadré peut devenir un puissant levier d'apprentissage, capable de développer les compétences humaines les plus recherchées au 21e siècle : communication, collaboration, et gestion de soi. Nos valeurs fondamentales sont la <strong>bienveillance</strong>, l'<strong>inclusion</strong> et le <strong>droit à l'erreur</strong> comme moteur de progression.</p>
+        <p><strong>Ludus Mentis est né d'une conviction :</strong> un temps d'écran bien encadré peut devenir un puissant levier d'apprentissage. Nos valeurs fondamentales sont la <strong>bienveillance</strong>, l'<strong>inclusion</strong> et le <strong>droit à l'erreur</strong> comme moteur de progression.</p>
       </section>
 
       <section class="document-section">
         <h3>Notre méthodologie : le cycle de l'apprentissage</h3>
-        <p>Le secret de notre efficacité réside dans l'application d'une méthode pédagogique reconnue, le <strong>cycle de Kolb</strong>, pour transformer une expérience de jeu concrète en une compétence durable. Voici un exemple concret avec le jeu <em>Overcooked</em> :</p>
-        <ol>
-          <li><strong>L'expérience concrète (l'action) :</strong> L'équipe doit préparer des plats en un temps record. Sans coordination, les commandes se croisent, des ingrédients manquent, des plats brûlent. C'est le chaos.</li>
-          <li><strong>L'observation réfléchie (le débriefing) :</strong> L'animateur arrête le jeu et demande : "Que s'est-il passé ?". Un jeune répond : "J'ai crié parce que personne ne m'écoutait !". Un autre ajoute : "On ne savait pas qui faisait quoi."</li>
-          <li><strong>La conceptualisation abstraite (la leçon) :</strong> Le groupe en déduit une règle générale : "Pour réussir, il faut une communication claire et une bonne répartition des rôles." Ce principe est ensuite relié à des situations scolaires (un travail de groupe, un projet sportif).</li>
-          <li><strong>L'expérimentation active (la mise en pratique) :</strong> L'équipe relance une partie avec une nouvelle stratégie : "Ok, toi tu gères les cuissons, moi les découpes, et on s'annonce les commandes à voix haute." Ils constatent immédiatement l'amélioration.</li>
-        </ol>
+        <p>Le secret de notre efficacité réside dans l'application d'une méthode pédagogique reconnue, le <strong>cycle de Kolb</strong>. Voici un exemple concret avec le jeu <em>Overcooked</em> :</p>
+        <div class="kolb-cycle">
+            <div class="kolb-step">
+                <h4>L'expérience concrète</h4>
+                <p>L'équipe doit préparer des plats en un temps record. Sans coordination, les commandes se croisent, des ingrédients manquent, des plats brûlent. C'est le chaos.</p>
+            </div>
+            <div class="kolb-step">
+                <h4>L'observation réfléchie</h4>
+                <p>L'animateur arrête le jeu et demande : "Que s'est-il passé ?". Un jeune répond : "J'ai crié parce que personne ne m'écoutait !". Un autre ajoute : "On ne savait pas qui faisait quoi."</p>
+            </div>
+            <div class="kolb-step">
+                <h4>La conceptualisation abstraite</h4>
+                <p>Le groupe en déduit une règle générale : "Pour réussir, il faut une communication claire et une bonne répartition des rôles." Ce principe est ensuite relié à des situations scolaires.</p>
+            </div>
+            <div class="kolb-step">
+                <h4>L'expérimentation active</h4>
+                <p>L'équipe relance une partie avec une nouvelle stratégie : "Ok, toi tu gères les cuissons, moi les découpes." Ils constatent immédiatement l'amélioration.</p>
+            </div>
+        </div>
       </section>
 
       <section class="document-section">
         <h3>Le rôle de l'animateur : un facilitateur</h3>
-        <p>L'animateur Ludus Mentis n'est pas un simple surveillant. C'est un <strong>facilitateur /strong>, dont le rôle est de :</p>
+        <p>L'animateur Ludus Mentis n'est pas un simple surveillant. C'est un <strong>facilitateur formé</strong>, dont le rôle est de :</p>
         <ul>
             <li><strong>Créer un cadre sécurisant</strong> où chaque jeune se sent libre de s'exprimer.</li>
             <li><strong>Guider les débriefings</strong> en posant les bonnes questions, sans jamais donner les réponses.</li>
@@ -110,14 +189,23 @@
         <h3>Des compétences concrètes pour la réussite scolaire</h3>
         <div class="competences-grid">
           <div class="competence-card">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+            </div>
             <h4>Communication et collaboration</h4>
-            <p>En apprenant à se coordonner en jeu, les jeunes développent une communication plus précise et une meilleure écoute, des atouts clés pour les travaux de groupe et les exposés oraux.</p>
+            <p>En apprenant à se coordonner en jeu, les jeunes développent une communication plus précise et une meilleure écoute, des atouts clés pour les travaux de groupe.</p>
           </div>
           <div class="competence-card">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"></path><path d="m9 12 2 2 4-4"></path></svg>
+            </div>
             <h4>Gestion du stress et persévérance</h4>
-            <p>Faire face à un défi chronométré ou à un échec en jeu leur apprend à gérer la pression et à ne pas abandonner, une compétence directement applicable lors d'un examen ou face à un exercice difficile.</p>
+            <p>Faire face à un défi chronométré ou à un échec en jeu leur apprend à gérer la pression et à ne pas abandonner, une compétence directement applicable lors d'un examen.</p>
           </div>
           <div class="competence-card">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 19-7-7 7-7"></path><path d="m19 19-7-7 7-7"></path></svg>
+            </div>
             <h4>Résolution de problèmes et esprit critique</h4>
             <p>Analyser une situation de jeu pour trouver la meilleure stratégie stimule leur capacité à décomposer un problème complexe, à anticiper et à adapter leur plan d'action.</p>
           </div>
