--- a/educateurs.html
+++ b/educateurs.html
@@ -69,8 +69,7 @@
     <section class="section card" style="text-align:center;">
         <h2>Notre kit pédagogique</h2>
         <p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
-        <p><em>(Note : le fichier PDF devra être créé et placé au chemin indiqué ci-dessous)</em></p>
-        <a href="assets/downloads/kit-pedagogique-ludus-mentis.pdf" class="btn" download>Télécharger le kit éducateur (PDF)</a>
+        <a href="kit-pedagogique.html" class="btn" download>Accéder au kit éducateur (HTML)</a>
     </section>
     
     <section class="section card">
